@@ -1,3 +1,12 @@
+2007-09-04  Girish Ramakrishnan  <girish@trolltech.com>
+
+        Reviewed by Simon.
+
+        Fixed Qt build on Windows
+
+        * html/HTMLFormElement.cpp:
+        (WebCore::pathGetFilename):
+
 2007-09-03  David Harrison  <harrison@apple.com>
 
         Reviewed by Kevin Decker.
